--- a/docs/tutorials/create-custom-application/security/react-application/integrating-hosted-ui-authentication-flow.mdx
+++ b/docs/tutorials/create-custom-application/security/react-application/integrating-hosted-ui-authentication-flow.mdx
@@ -8,6 +8,7 @@ description: Learn how to implement authentication in your custom React applicat
 
 import CenteredImage from "@components/CenteredImage";
 import headerLoggedIn from "./integrating-hosted-ui-authentication-flow/header-logged-in.png";
+import headerLoggedInWithoutMenu from "./integrating-hosted-ui-authentication-flow/header-logged-in-without-menu.png";
 import headerNotLoggedIn from "./integrating-hosted-ui-authentication-flow/header-not-logged-in.png";
 import hostedUiSignIn from "./integrating-hosted-ui-authentication-flow/hosted-ui-01-sign-in.png";
 import hostedUiSignUp from "./integrating-hosted-ui-authentication-flow/hosted-ui-02-sign-up.png";
@@ -25,7 +26,23 @@ In order to follow this tutorial, you must use Webiny version **5.13.0** or grea
 
 :::
 
-```tsx title="pinterest-clone/app/code/src/components/Layout.tsx" {5,6,16-17,28-57}
+## The Remaining Steps
+
+With the initial setup taken care of, we're now ready to perform the remaining steps of the Hosted UI authentication flow integration and finally see everything in action. In order to do that, we'll need to adjust the existing header bar.
+
+So, in the top-right corner, if the user is not signed-in, we will show a simple **Sign In** button, like so:
+
+<CenteredImage alt="Header Bar - Not Logged In State" src={headerNotLoggedIn} />
+
+On the other hand, if the user is already signed-in, then we'll show the existing **&#10753;** icon, which, as [previously seen](/docs/tutorials/create-custom-application/react-application/new-pin-modal-dialog), is used to open the **New Pin** modal dialog.
+
+With that, we'll also render signed-in user's avatar, where, at least for now, we'll simply display the first letter of user's first name. And also, once the avatar is clicked, a simple drop down menu will be rendered that will contain a single menu item, and that's the **Sign Out** link.
+
+<CenteredImage alt="Header Bar - Logged In State" src={headerLoggedIn} />
+
+In order to achieve all of this, let's modify the existing [`Layout`](#) React component:
+
+```tsx title="pinterest-clone/app/code/src/components/Layout.tsx" {5-6,16-18,30-57}
 import React, { useState, useCallback } from "react";
 import { Menu, Avatar, Button, Divider, Dropdown } from "antd";
 import { PlusOutlined } from "@ant-design/icons";
@@ -41,8 +58,9 @@ import NewPinModal from "./NewPinModal";
  */
 const Layout: React.FC<{ className: string }> = (props) => {
   const [visible, setVisible] = useState(false);
-  const login = useCallback(() => Auth.federatedSignIn(), []);
   const { identity } = useSecurity();
+  const signIn = useCallback(() => Auth.federatedSignIn(), []);
+  const signOut = useCallback(() => identity.logout, [identity]);
 
   return (
     <div className="layout">
@@ -66,7 +84,7 @@ const Layout: React.FC<{ className: string }> = (props) => {
               <Dropdown
                 overlay={
                   <Menu>
-                    <Menu.Item key={"signout"} danger onClick={identity.logout}>
+                    <Menu.Item key={"signout"} danger onClick={signOut}>
                       Sign Out
                     </Menu.Item>
                   </Menu>
@@ -78,7 +96,7 @@ const Layout: React.FC<{ className: string }> = (props) => {
               </Dropdown>
             </>
           ) : (
-            <Button type="primary" onClick={login}>
+            <Button type="primary" onClick={signIn}>
               Sign In
             </Button>
           )}
@@ -96,14 +114,36 @@ const Layout: React.FC<{ className: string }> = (props) => {
 export default Layout;
 ```
 
-<CenteredImage alt="Header Bar - Not Logged In State" src={headerNotLoggedIn} />
+As we can see, first we're retrieving the currently signed-in user via the [`useSecurity`](#) React hook. Then, if the user was returned, we're rendering the [`Button`](#) and [`Dropdown`](#) components, where the latter contains the mentioned **Sign Out** menu item. Naturally, if no user was returned, them we're just rendering the **Sign In** button.
+
+With all of the previous steps were performed correctly, if we were to click on the **Sign In** button, we should be redirected to the Hosted UI authentication flow, which will initially display the **Sign In** form:
 
 <CenteredImage style={{ maxWidth: 750 }} alt="Hosted UI Authentication Flow - Sign In" src={hostedUiSignIn} />
+
+Since this is our first visit, we can click on the **Sign up** link below, which will then take us to the **Sign Up** form:
+
 <CenteredImage style={{ maxWidth: 750 }} alt="Hosted UI Authentication Flow - Sign Up" src={hostedUiSignUp} />
+
+Once we fill all of the fields and submit the form, we should receive the following screen, asking us to enter the verification code that was automatically sent to our e-mail address:
+
 <CenteredImage
   style={{ maxWidth: 750 }}
   alt="Hosted UI Authentication Flow - E-mail Verification"
   src={hostedUiVerification}
 />
 
-<CenteredImage alt="Header Bar - Logged In State" src={headerLoggedIn} />
+Finally, by entering the correct code into the field and submitting the form, the sign up process should be successfully concluded and we should be redirected back to our React application. Since we're now signed-in, in the header bar, we should be able to see the **&#10753;** icon button and our avatar (showing the first letter of our first name):
+
+<CenteredImage alt="Header Bar - Logged In State" src={headerLoggedInWithoutMenu} />
+
+## Final Result
+
+With the Hosted UI authentication flow finally integrated, our users can now sign up and sign in into our application!
+
+And, by only showing the **&#10753;** icon button to signed-in users, we've restricted the anonymous users from opening the **New Pin** modal dialog and creating new pins.
+
+But, note that without proper authentication and authorization checks implemented on the GraphQL API side, our application can still be considered as not secure. This is because, at the moment, anonymous users are still able to perform sensitive GraphQL mutations, with just a simple GraphQL client. For example, they can still create new pins via the seen `createPin` mutation, or even delete the existing pins created by other users, via the `deletePin` mutation.
+
+
+So, to make our application even more secure, in the next and final section of this tutorial, we'll implement the necessary authentication and authorization checks on the GraphQL API side.
+
