wip: create security section

--- a/docs/tutorials/create-custom-application/security/graphql-api/implementing-authentication-and-authorization-logic.mdx
+++ b/docs/tutorials/create-custom-application/security/graphql-api/implementing-authentication-and-authorization-logic.mdx
@@ -65,6 +65,18 @@ All of the resolver functions for these mutations are located in the [`PinsMutat
 
 ## Before We Begin - A Note on Testing
 
+In the following couple of sections, we'll manually test the changes that we'll perform. Meaning, after a change has been performed, via the [GraphQL Playground](https://github.com/graphql/graphql-playground) GraphQL client, we'll manually issue queries and mutations, both as signed in and anonymous users.
+
+When it comes to signed-in users, in order to simulate one, we'll need to add the `authorization` header via the **HTTP Headers** tab:
+
+TODO IMAGE
+
+The value of the header is a base 64 encoded JWT token, which can be easily retrieved by signing in regularly, via the React application, opening the Network tab, picking any **POST** GraphQL HTTP request from the list of all requests, and finding the token in the **Request Headers** section:
+
+Once you've found it, simply copy and paste the token into the GraphQL playground, and you should be good to go.
+
+<!-- Finally, for a more automated way of testing the changes that we'll perform, check out the `Testing` section of this tutorial.  -->
+
 ## Creating Pins
 
 Let's start with the [`createPin(data: PinCreateInput!): Pin!`](https://github.com/webiny/webiny-examples/blob/master/create-custom-application/03-extending-graphql-api/pinterest-clone/api/code/graphql/src/plugins/scaffolds/pins/typeDefs.ts#L53) mutation. In order to make it secure, we'll apply the following changes to the [`createPin`](#) resolver function:
